--- a/index.html
+++ b/index.html
@@ -231,6 +231,8 @@
   <template id="messages">
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
+  <link rel="stylesheet" href="vendor/pristine/nouislider.min.css">
+  <script src="vendor/pristine/nouislider.min.js"></script>
   <script src="vendor/pristine/pristine.js"></script>
   <script src="js/main.js" type="module"></script>
 </body>
